# visocr

./: .env.example  .gitignore  README.md  configs.json  docker-compose.train.yml  docker-compose.yml  pyproject.toml
docex/: __init__.py
docker/: configs.json
docker/labelstudio/: imagecaption_labels.xml  init.py  init.sh  layout_labels.xml  tableformer_labels.xml
docker/minio/: init.sh
docker/postgres/: init.sql
docker/prefect_flows/: run.py
docker/prefect_flows/flows/: extract_layout_to_images.py  extract_pdfs_to_images.py
docker/prefect_flows/providers/: config.py  labelstudio.py  minio.py
docker/prefect_flows/tasks/: minio_download_files.py  minio_upload_files.py  pdfs_to_imgs.py
prefect/extract_pdf/: main.py
prefects/flows/: extract_pdf.py
prefects/providers/: labelstudio.py  minio.py
prefects/tasks/: load_labelstudio.py  load_minio.py
