[project]
name = "docex"
version = "0.1.0"
description = "Document Extraction using AI"
authors = [
    {name = "Minh Doan",email = "quangminh57dng@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
